--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "execute":"node extra/patterns/diamond.js",
-    "execute1": "node extra/patterns/equilateral.js" 
+    "execute1": "node extra/patterns/equilateral.js",
+    "execute2":"node extra/utils/validation.js",
+    "execute3":"node extra/utils/permission.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ujjwal-jain18/javascript-server.git"
-    },
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
