--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "execute":"node extra/patterns/diamond.js",
+    "execute": "node extra/patterns/diamond.js",
     "execute1": "node extra/patterns/equilateral.js",
-    "execute2":"node extra/utils/validation.js",
-    "execute3":"node extra/utils/permission.js"
+    "execute2": "node extra/utils/validation.js",
+    "execute3": "node extra/utils/permission.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/ujjwal-jain18/javascript-server/issues"
   },
-  "homepage": "https://github.com/ujjwal-jain18/javascript-server#readme"
+  "homepage": "https://github.com/ujjwal-jain18/javascript-server#readme",
+  "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3"
+  }
 }
