--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
-      "pre-push": "npm run lint",
+      "pre-push": "npm run lint"
     }
   },
   "scripts": {
