--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
     "nodemon": "nodemon ./dist/index.js",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
-    "lint:fix": "npm run lint --fix",
-        
+    "lint:fix": "npm run lint --fix"
   },
   "repository": {
     "type": "git",
