--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run lint"
-    }
+  "dependencies": {
+    "@types/node": "^13.5.1",
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "commitizen": "^4.0.3",
+    "husky": "^4.2.1",
+    "nodemon": "^2.0.2",
+    "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1",
+    "tsc-watch": "^4.1.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,7 +32,8 @@
     "nodemon": "nodemon ./dist/index.js",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
     "lint:fix": "npm run lint --fix",
-    "commit": "npx git-cz"
+    "pre-commit": "npm run lint && npm test",
+    "pre-push": "npm run lint && npm test"
   },
   "repository": {
     "type": "git",
@@ -32,22 +44,5 @@
   "bugs": {
     "url": "https://github.com/ujjwal-jain18/javascript-server/issues"
   },
-  "homepage": "https://github.com/ujjwal-jain18/javascript-server#readme",
-  "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@types/node": "^13.5.0",
-    "babel": "^6.23.0",
-    "babel-node": "0.0.1-security",
-    "commitizen": "^4.0.3",
-    "husky": "^4.2.1",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "tslint": "^6.0.0"
-  },
-  "devDependencies": {
-    "tsc-watch": "^4.1.0",
-    "typescript": "^3.7.5"
-  }
+  "homepage": "https://github.com/ujjwal-jain18/javascript-server#readme"
 }
