--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/express": "^4.17.2",
     "@types/node": "^13.5.1",
-    "prettier": "^1.19.1",
-    "tslint": "^6.0.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "prettier": "^1.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -29,6 +31,7 @@
     "execute4": "npx babel-node extra",
     "start:extra": "babel-node extra",
     "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "start:src": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
     "nodemon": "nodemon ./dist/index.js",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
     "lint:fix": "npm run lint --fix",
