--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@types/node": "^13.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
