feat :Add routes skeleton

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "execute3": "node extra/utils/permission.js",
     "execute4": "npx babel-node extra",
     "start:extra": "babel-node extra",
-    "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemonE\"",
     "start:src": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "aaa": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
     "nodemon": "nodemon ./dist/index.js",
+    "nodemonE": "nodemon ./dist/extraTs/index.js",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
     "lint:fix": "npm run lint --fix",
     "pre-commit": "npm run lint && npm test",
