--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.7.0",
     "@types/node": "^13.5.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11",
     "prettier": "^1.19.1",
     "tslint": "^6.0.0"
   },
