--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "husky": {
+    "hooks": {
+    "pre-commit": "npm test",
+    "pre-push": "npm test",
+    "...": "..."
+    }
+    },
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.7.0",
