--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "index.js",
   "husky": {
     "hooks": {
-    "pre-commit": "npm test",
-    "pre-push": "npm test",
-    "...": "..."
+      "pre-commit": "npm test",
+      "pre-push": "npm test",
+      "...": "..."
     }
-    },
+  },
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.7.0",
     "@types/node": "^13.5.1",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
