--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.7.0",
     "@types/node": "^13.5.1",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.1",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -21,6 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "prettier": "^1.19.1",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3",
     "tslint": "^6.0.0"
   },
   "devDependencies": {
